# scientific-claim-verification-engine

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/specs/: mvp-pipeline.md
eval/results/: baseline_phase0.json  direct_baseline.json
examples/: sample_run.py
examples/inputs/: crow_sample.txt  edison_trem2_alzheimer.txt
scripts/: direct_baseline.py  eval_scifact.py  fetch_edison_sample.py  show_metrics.py  show_report.py
src/: extract.py  models.py  report.py  resolve.py  verify.py
src/clients/: _cache.py  openalex.py  semantic_scholar.py
tests/unit/: test_cache.py  test_extract.py  test_models.py  test_openalex.py  test_report.py  test_resolve.py  test_semantic_scholar.py  test_verify.py
